Fixed alignements issues in rank card

--- a/src/styles/BaseStyles.module.css
+++ b/src/styles/BaseStyles.module.css
@@ -1,3 +1,10 @@
+.headerBg {
+    height: 240px;
+    background-image: linear-gradient(247deg, #6a79dd 127%, #5866c3 -24%);
+    z-index: -10;
+    position: static;
+}
+
 .card {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border-radius: 8px;
@@ -62,7 +69,7 @@
 
 
 /** Rank Card Specific styles **/
-.rankCard h4 {
+.rankCard div[name=rank] {
     font-size: 14px;
     font-weight: 500;
     font-stretch: normal;
@@ -83,7 +90,7 @@
     color: #42505c;
 }
 
-.rankCard h5 img {
+.rankCard img {
     width: 32px;
     height: 32px;
     margin-top: auto;
